Closed Bug 1885201 Opened 2 years ago Closed 2 years ago

WebGLChild::FlushPendingCmds merely MOZ_ASSERTs non-null GetCurrentSerialEventTarget()

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

But we suspect this can be null sometimes.

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eabb80e0c2a5 In WebGLChild::FlushPendingCmds, check for GetCurrentSerialEventTarget()->nullptr. r=gfx-reviewers,bradwerth
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: