Bug 1885201 - In WebGLChild::FlushPendingCmds, check for GetCurrentSerialEventTarget()->nullptr. r=gfx-reviewers,bradwerth

This should be rare, so NS_WARNING.

Differential Revision: https://phabricator.services.mozilla.com/D204542